Updated 更新日志 (markdown)

--- a/更新日志.md
+++ b/更新日志.md
@@ -7,144 +7,144 @@
 * 软件界面语言可选，包括英语、捷克语、德语、法语、匈牙利语、意大利语、波兰语、葡萄牙语、俄语、瑞典语、土耳其语、越南语和简体中文。
 * 文件管理器加入文件拷贝、剪贴、删除功能。
 
-修复：
+**修复**：
 * 修复EPUB文档左右页边距不一致的bug。
 * 修复EPUB文档书签图标无法显示的bug。
 * 修复使用KUAL启动后，从屏保状态恢复时屏幕下半部分仍是屏保画面的bug。
 
-增强：
+**增强**：
 * EPUB文档更多字号选择，加入字号微调选项。
 
 ================================================================
-**1月8日更新（koreader-nightly-20140108)**
+### 1月8日更新（koreader-nightly-20140108)
 
-新特性：
+**新特性**：
 * 中文标点禁排和压缩(需要在顶部菜单开启标点压缩)。
 
-修复：
+**修复**：
 * 修复保存页边距后打开EPUB缓存无效导致处理时间过长的bug。(via ithinkpad)
 
 ================================================================
-**1月5日更新（koreader-nightly-20140105)**
+### 1月5日更新（koreader-nightly-20140105)
 
-新特性：
+**新特性**：
 * 阅读界面可显示电量图标。
 * 长按屏幕右上角可进入/退出书签浏览模式。（书签浏览模式下左右滑动只在放置书签的页面间切换。）
 
-增强：
+**增强**：
 * 菜单显示页面重叠状态。
 
 ================================================================
-**1月4日更新（koreader-nightly-20140104)**
+### 1月4日更新（koreader-nightly-20140104)
 
-新特性：
+**新特性**：
 * 实验性支持PDF分块缩放。在快速翻页模式下（点击屏幕左上角），双击多栏排版的页面可自动缩放到点击区域。
 
-增强：
+**增强**：
 * 更新K2pdfopt到最新版本2.14。
 * 设置菜单点击操作加入视觉反馈，防止多次点击。
 
-修复：
+**修复**：
 * 修复阅读EPUB时的一处内存泄漏bug。(via hakaha)
 * 修复EPUB文档页边距不能每个文档单独保存的bug。
 * 修复EPUB文档右边距大于左边距的bug。
 
 ================================================================
-**12月30日更新（koreader-nightly-20131230)**
+### 12月30日更新（koreader-nightly-20131230)
 
-增强：
+**增强**：
 * 点击屏幕上方可以同时显示阅读器和设置两个菜单。
 * 自动保存阅读进度（默认关闭，可在defaults.lua中打开）。
 * 阅读器菜单加入显示页面重叠区域的选项。
 * 打开文档时提示文档正在被打开窗口。
 
-修复：
+**修复**：
 * 修复Kobo上屏幕亮度无法保存的bug。
 * 修复EPUB文档关闭内置样式后不自动选择epub.css的bug。
 * 修复EPUB文档页边距设置不保存的bug。
 * 修复无法识别XPS文档的bug。
 
 ================================================================
-**12月27日更新（koreader-nightly-20131227)**
+### 12月27日更新（koreader-nightly-20131227)
 
-增强：
+**增强**：
 * 取词窗口跟随高亮的单词。
 * 文档管理器中选择文档时反转颜色作为反馈。
 * 增加文档管理器字号方便选择。
 
-修复：
+**修复**：
 * 修复EPUB文档改变字号、字体、页边距和行间距导致丢失当前进度的bug。
 * 修复EPUB文档字号选项无法保存的bug。
 * 修复Kobo上帧缓存格式错误导致图片渲染模糊的bug。
 
 ================================================================
-**12月25日更新（koreader-nightly-20131225)**
+### 12月25日更新（koreader-nightly-20131225)
 
-新特性：
+**新特性**：
 * EPUB文档支持查词典（目前仅支持英文查词）。
 
 ================================================================
-**12月17日更新（koreader-nightly-20131217)**
+### 12月17日更新（koreader-nightly-20131217)
 
-新特性：
+**新特性**：
 * 自定义翻页和设置窗口响应区域。
 * 阅读PDF/DJVU文档时，点击进度条可显示时间。
 
-增强：
+**增强**：
 * 默认非卷轴模式下显示页面重叠区域。
 * Kobo上退出koreader返回原生系统界面。
 
-修复：
+**修复**：
 * 修复重排模式下取词有时不弹出词典窗口的bug。
 * 修复菜单窗口条目多于一屏显示超出窗口区域的bug。
 * 修复Kobo上koreader运行一段时间响应变慢的bug。
 
 ================================================================
-**12月2日更新（koreader-nightly-20131202)**
+### 12月2日更新（koreader-nightly-20131202)
 
-增强：
+**增强**：
 * 更新K2pdfopt到最新版本2.12。
 
-修复：
+**修复**：
 * 修复多栏排版的PDF/DJVU页面重排导致取词不准确的bug。
 * 修复文件管理器历史记录不是按时间倒序排列的bug。
 * 修复多款3G版Paperwhite2上无法打开程序的bug。
 
 ================================================================
-**11月28日更新（koreader-nightly-20131128)**
+### 11月28日更新（koreader-nightly-20131128)
 
-新特性：
+**新特性**：
 * 加入Kindle Paperwhite2和Kobo Aura的支持。
 
-增强：
+**增强**：
 * 优化帧缓存机制，原生支持4位（Kindle）、8位、16位（Kobo）以及24位、32位帧缓存设备。
 
-修复：
+**修复**：
 * 修复新的帧缓存下横屏模式无法刷新显示的bug。
 
 ================================================================
-**10月29日更新（koreader-nightly-20131029)**
+### 10月29日更新（koreader-nightly-20131029)
 
-增强：
+**增强**：
 * 代码重构（避免使用全局变量提升运行速度）。
 * 代码重构（显示模块支持4位、8位、16位灰度图像以及24位、32位彩色图像）。
 * 卷轴模式下上下滑动更加平滑。
 * 重排模式自动计算字符间距，减少出现断行和空行的可能性。
 * 重排模式自动计算行缩进，减少页边污点和边注造成的断行混乱。
 
-修复：
+**修复**：
 * 修复重排模式下可能出现取词只能取整行的bug。
 * 修复页面跳转对话框中回车跳转可能造成页面不刷新的bug。
 * 修复标记文本的第一行只有一个词时无法标记的bug。
 
 ================================================================
-**10月18日更新（koreader-nightly-20131018)**
+### 10月18日更新（koreader-nightly-20131018)
 
-增强：
+**增强**：
 * 页面跳转支持分页模式下的EPUB文档。
 * 页面跳转支持输入数字后直接点回车跳转。
 
-修复：
+**修复**：
 * 修复Kobo上字典无法显示非英文字符的bug。
 * 修复Kobo上字典无法查询非英文单词的bug。
 * 修复Kobo Aura HD上非英文字符显示过大的bug。
@@ -152,293 +152,293 @@
 * 修复没有安装EPUB文档定义字体出现乱码的bug。
 
 ================================================================
-**10月16日更新（koreader-nightly-20131016)**
+### 10月16日更新（koreader-nightly-20131016)
 
-增强：
+**增强**：
 * 更新MuPDF到最新版本1.3。
 * 更新K2pdfopt到最新版本2.03。
 * 默认预渲染两页（可修改DHINTCOUNT参数改为任意值）。
 * 更好的内存使用管理，减少原生系统框架重启的概率。
 * 页面标注在重排模式和非重排模式下保持一致。
 
-修复：
+**修复**：
 * 修复菜单页数无法显示超过10页的bug。
 * 修复横屏显示部分PDF文档导致程序崩溃的bug。
 * 修复书签和目录窗口可能超出屏幕之外的bug。
 
 ================================================================
-**8月1日更新（koreader-nightly-20130801)**
+### 8月1日更新（koreader-nightly-20130801)
 
-新特性：
+**新特性**：
 * 支持页面跳转。
 
-增强：
+**增强**：
 * 默认禁用双击手势，界面反应更灵敏。
 
-修复：
+**修复**：
 * 修复页面上下滚动瞬刷无效的bug。
 * 修复横屏状态下屏幕键盘无法完全显示的bug。
 * 修复输入框没有字符时按删除键导致后续输入无效的bug。
 
 ================================================================
-**7月31日更新（koreader-nightly-20130731)**
+### 7月31日更新（koreader-nightly-20130731)
 
-修复：
+**修复**：
 * 修复字典窗口无法显示过长解释的bug。
 * 修复EPUB文档横屏双栏显示的bug。
 
 ================================================================
-**7月25日更新（koreader-nightly-20130725)**
+### 7月25日更新（koreader-nightly-20130725)
 
-新特性：
+**新特性**：
 * EPUB文档支持多字体。（需要老牛字体样式3.0或类似字体定义。）
 
 
 
 ================================================================
-**7月24日更新（koreader-nightly-20130724)**
+### 7月24日更新（koreader-nightly-20130724)
 
-修复：
+**修复**：
 * 修复字典窗口底部出现大段空白的bug。
 
-增强：
+**增强**：
 * 字典窗口切换使用全刷。
 * 页面上下滚动使用瞬刷。
 
 ================================================================
-**7月22日更新（koreader-nightly-20130722)**
+### 7月22日更新（koreader-nightly-20130722)
 
-新特性：
+**新特性**：
 * 可使用多本字典查词。
 * 点击词典标题可设置为默认词典。
 * 可查汉语字典。
 
 ================================================================
-**7月21日更新（koreader-nightly-20130721)**
+### 7月21日更新（koreader-nightly-20130721)
 
-新特性：
+**新特性**：
 * PDF文档加入文档语言选项。
 * 加入中文OCR功能，需要选择文档语言为“中文”。
 
-修复：
+**修复**：
 * 修复某些页面PDF自动切边失效的bug。
 * 修复中文PDF页面无法长按选单个字的bug。
 
-增强：
+**增强**：
 * 选择中日韩（CJK）文档语言时自动设置较小的字符间距。
 * 设置对话框记忆最后使用的选项卡。（via liuguo0225）
 
 ================================================================
-**7月14日更新（koreader-nightly-20130714)**
+### 7月14日更新（koreader-nightly-20130714)
 
-修复：
+**修复**：
 * 修复KUAL启动koreader，进入目录的次序不同导致文档的历史记录不一致的bug。
 
-增强：
+**增强**：
 * 加入半自动切边选项，手动切边限定大致范围，在此范围内自动选择内容区域。
 * 在屏幕方向设置对话框选择横屏可在两个横屏方向切换。（via liuguo0225）
 
 ================================================================
-**7月13日更新（koreader-nightly-20130713)**
+### 7月13日更新（koreader-nightly-20130713)
 
-修复：
+**修复**：
 * 修复Kobo touch的触屏输入坐标不对应的bug。
 * 修复Kindle上koreader意外退出导致子进程无法关闭的bug。
 * 修复空白PDF页面內长按并拖动（高亮操作）可能导致程序意外退出的bug。
 
-增强：
+**增强**：
 * 检测Kobo型号设置对应DPI。
 * PDF文档自动切边之前可手动切边限定大致范围。
 * 使用定点算法加速PDF页面重排。（via 晴天滚雷）
 
 ================================================================
-**7月3日更新（koreader-nightly-20130703)**
+### 7月3日更新（koreader-nightly-20130703)
 
-增强：
+**增强**：
 * 加入配置文件（koreader/defaults.lua）。
 
 ================================================================
-**6月30日更新（koreader-nightly-20130630)**
+### 6月30日更新（koreader-nightly-20130630)
 
-新特性：
+**新特性**：
 * EPUB文档可调页边距。
 
 ================================================================
-**6月27日更新（koreader-nightly-20130627)**
+### 6月27日更新（koreader-nightly-20130627)
 
-增强：
+**增强**：
 * PDF文档默认使用分页模式（卷轴模式默认关闭）。
 * 快速翻页模式下禁用卷轴模式。
 * 选择适应页面缩放自动打开分页模式；选择适应内容缩放自动打开卷轴模式。
 
 ================================================================
-**6月17日更新（koreader-nightly-20130617)**
+### 6月17日更新（koreader-nightly-20130617)
 
-新特性：
+**新特性**：
 * 加入PDF文档的书摘标注功能。
 
-修复：
+**修复**：
 * 修复词典窗口音标显示不全的bug。
 
 ================================================================
-**6月14日更新（koreader-nightly-20130614)**
+### 6月14日更新（koreader-nightly-20130614)
 
-修复：
+**修复**：
 * 修复打开PDF文档出现白屏，需要向上或向下翻一页的bug。
 * 修复重启后第一次打开PDF文档，标题栏在阅读时出现的bug。
 * 修复关闭文档时页面多次刷新的bug。（需更新kpvbooklet至0.4.8）
 
 ================================================================
-**5月27日更新（koreader-nightly-20130527)**
+### 5月27日更新（koreader-nightly-20130527)
 
-修复：
+**修复**：
 * 修复词典窗口显示汉语释义时无法填充整行的排版bug。
 
 ================================================================
-**5月21日更新（koreader-nightly-20130521)**
+### 5月21日更新（koreader-nightly-20130521)
 
-修复：
+**修复**：
 * 修复阅读EPUB文档时切换到卷轴模式不能跟新当前阅读位置的bug。
 
 ================================================================
-**5月3日更新（koreader-nightly-20130503)**
+### 5月3日更新（koreader-nightly-20130503)
 
-增强：
+**增强**：
 * 支持扫描版PDF页面取词查词。（暂时仅支持英文单词。）
 
-修复：
+**修复**：
 * 修复切边后在页面部分区域取词时单词无法高亮的bug。
 * 修复修改默认分页模式和全屏模式无效的bug。（via shishengwei）
 * 修复取词时单词內含有标点符号导致取词无效的bug。（via xiaomutou and johnleo）
 
 ================================================================
-**5月1日更新（koreader-nightly-20130501)**
+### 5月1日更新（koreader-nightly-20130501)
 
-新特性：
+**新特性**：
 * 加入查词功能，支持单词变形和模糊查询，支持StarDict词典格式。
 * 实验性支持扫描版PDF和重排后PDF查词。(Stardict词典和Tesseract语言包的安装请参考FAQ。)
 
 ================================================================
-**4月28日更新（koreader-nightly-20130428)**
+### 4月28日更新（koreader-nightly-20130428)
 
-增强：
+**增强**：
 * 卷轴模式下打开PDF文档恢复上一次关闭时的阅读位置。
 * 调整重排参数时屏幕左上角显示正在处理动态图标。
 
 ================================================================
-**4月22日更新（koreader-nightly-20130422)**
+### 4月22日更新（koreader-nightly-20130422)
 
-增强：
+**增强**：
 * 页边距可调节重排页面的上下页边大小。
 
-修复：
+**修复**：
 * 修复双指滑动调节前光亮度可能导致程序崩溃的bug。
 * 修复重排模式下从横屏切换到竖屏可能导致程序崩溃的bug。
 * 修复重排模式下进入快速翻页模式可能白屏的bug。
 * 修复重排模式下调小字号可能白屏的bug。
 
 ================================================================
-**4月15日更新（koreader-nightly-20130415)**
+### 4月15日更新（koreader-nightly-20130415)
 
-新特性：
+**新特性**：
 * 加入PDF/DJVU自动切边功能。（选择自动切边后可调整页边距。）
 * 加入PDF/DJVU半页滚动功能。（在卷轴模式下上下滑动可以根据滑动距离滚屏。）
 * 加入EPUB文档滑动翻页功能。(via exprade)
 * 加入前光亮度调节。（阅读界面双指上下滑动可以调节前光亮度。）
 
 ================================================================
-**4月14日更新（koreader-nightly-20130414)**
+### 4月14日更新（koreader-nightly-20130414)
 
-修复：
+**修复**：
 * 修复竖排书籍重排后阅读方向错误的bug。(via tsay101)
 
 ================================================================
-**4月12日更新（koreader-nightly-20130412)**
+### 4月12日更新（koreader-nightly-20130412)
 
-增强：
+**增强**：
 * 升级到k2pdfopt版本1.65。
 * 使用默认渲染质量重排速度提升一倍。
 * 加入更多语言支持。
 
 ================================================================
-**4月10日更新（koreader-nightly-20130410)**
+### 4月10日更新（koreader-nightly-20130410)
 
-新特性：
+**新特性**：
 * 界面加入多语言支持，目前支持英语、简体中文、土耳其语、德语、捷克语。软件自动使用原生系统选择的语言。
 
 ================================================================
-**3月31日更新（koreader-nightly-20130331)**
+### 3月31日更新（koreader-nightly-20130331)
 
-新特性：
+**新特性**：
 * 顶部菜单加入时间显示。(via neoquest)
 
 ================================================================
-**3月29日更新（koreader-nightly-20130329)**
+### 3月29日更新（koreader-nightly-20130329)
 
-新特性：
+**新特性**：
 * 加入页面缩放快捷手势。
 * 加入屏幕旋转快捷手势。
 
 ================================================================
-**3月27日更新（koreader-nightly-20130327)**
+### 3月27日更新（koreader-nightly-20130327)
 
-增强：
+**增强**：
 * 快速翻页模式下，双指快速滑动可以返回翻页前的页面。（via yahwing）
 
 ================================================================
-**3月25日更新（kindlepdfviewer-touch-nightly-20130325)**
+### 3月25日更新（kindlepdfviewer-touch-nightly-20130325)
 
-修复：
+**修复**：
 * 修复卷轴模式下两页的分界线在屏幕中间时向前翻页导致不能完全显示页面的bug。（via chenghaibo）
 * 修复从TOC（Table of Content）列表跳转会导致程序退出的bug。（via yjjkahn、jingmouren）
 
 
 ================================================================
-**3月20日更新（kindlepdfviewer-touch-nightly-20130320)**
+### 3月20日更新（kindlepdfviewer-touch-nightly-20130320)
 
-新特性：
+**新特性**：
 * 重排模式下增加字体大小微调选项。
 
-增强：
+**增强**：
 * 重排竖排文档时屏幕旋转180度。
 
 
 ================================================================
-**3月19日更新（kindlepdfviewer-touch-nightly-20130319)**
+### 3月19日更新（kindlepdfviewer-touch-nightly-20130319)
 
-修复：
+**修复**：
 * 修复关闭快速翻页模式后快速滑动仍然会返回快速翻页前页码的bug。（via yahwing）
 * 修复卷轴模式下部分文档打开的页码与上次关闭时的页码不一致的bug。
 
 
 ================================================================
-**3月18日更新（kindlepdfviewer-touch-nightly-20130318)**
+### 3月18日更新（kindlepdfviewer-touch-nightly-20130318)
 
-增强：
+**增强**：
 * 顶部菜单增加主页按钮快速返回主界面。
 
-修复：
+**修复**：
 * 修复从屏保状态退出后主界面无法自动刷新的bug。
 
 
 ================================================================
-**3月17日更新（kindlepdfviewer-touch-nightly-20130317)**
+### 3月17日更新（kindlepdfviewer-touch-nightly-20130317)
 
-增强：
+**增强**：
 * 设置选项的视觉效果更加统一。
 * 手动切边时可以使用滑动手势微调切边框。
 
-修复：
+**修复**：
 * 修复横屏后菜单宽度没有重新计算的bug。
 
 
 ================================================================
-**3月16日更新（kindlepdfviewer-touch-nightly-20130316)**
+### 3月16日更新（kindlepdfviewer-touch-nightly-20130316)
 
-增强：
+**增强**：
 * 菜单使用触屏样式。
 
-修复：
+**修复**：
 * 修复KT上无法响应Home键的bug。
 * 修复卷轴模式下内容不满一屏的页面重复出现的bug。（via wildsonic）
 * 修复卷轴模式下某些页面无法全部显示的bug。（via yahwing）
@@ -446,274 +446,274 @@
 
 
 ================================================================
-**3月13日更新（kindlepdfviewer-touch-nightly-20130313)**
+### 3月13日更新（kindlepdfviewer-touch-nightly-20130313)
 
-增强：
+**增强**：
 * 重排时使用后台线程预渲染下一页。
 * 设置对话框、快速翻页模式和手动切边下禁用预渲染。
 
-修复：
+**修复**：
 * 修复在横屏下快速翻页方向与手指滑动方向相反的bug。
 * 修复快速滑动时无法记忆新位置的bug。(via yycomyy)
 * 修复阅读时会有标题栏跳出的bug。
 
 
 ================================================================
-**3月12日更新（kindlepdfviewer-touch-nightly-20130312)**
+### 3月12日更新（kindlepdfviewer-touch-nightly-20130312)
 
-修复：
+**修复**：
 * 修复卷轴模式下切换全屏无效的bug。（via wildsonic）
 
 
 ================================================================
-**3月11日更新（kindlepdfviewer-touch-nightly-20130311)**
+### 3月11日更新（kindlepdfviewer-touch-nightly-20130311)
 
-新特性：
+**新特性**：
 * 加入PDF/DJVU卷轴阅读模式。
 
-修复：
+**修复**：
 * 修复预渲染参数错误导致预渲染无效的bug。
 
 
 ================================================================
-**3月8日更新（kindlepdfviewer-touch-nightly-20130308)**
+### 3月8日更新（kindlepdfviewer-touch-nightly-20130308)
 
-新特性：
+**新特性**：
 * 加入截屏功能。同时点击屏幕对角线的两个端点即可截屏。生成的截屏文件在kindle磁盘根目录中。
 
 
 ================================================================
-**3月6日更新（kindlepdfviewer-touch-nightly-20130306)**
+### 3月6日更新（kindlepdfviewer-touch-nightly-20130306)
 
-修复：
+**修复**：
 * 修复EPUB阅读器无法保存卷轴阅读模式的bug。（via hooter）
 * 修复个别PDF切边预设值超出页面范围的bug。
 
 
 ================================================================
-**3月4日更新（kindlepdfviewer-touch-nightly-20130304)**
+### 3月4日更新（kindlepdfviewer-touch-nightly-20130304)
 
-新特性：
+**新特性**：
 * 加入快速滑动(Swipe)翻页。
 * 加入快速翻页(Flipping)模式。点击屏幕左上角可开启和关闭快速翻页模式。在快速翻页模式下手指慢速移动(Pan)一次可翻若干页，手指快速滑动(Swipe)可立即回到翻页前的位置。
 
 
 ================================================================
-**2月28日更新（kindlepdfviewer-touch-nightly-20130228)**
+### 2月28日更新（kindlepdfviewer-touch-nightly-20130228)
 
-修复：
+**修复**：
 * 修复多点触控可能引起软件退出的bug。
 
 
 ================================================================
-**2月25日更新（kindlepdfviewer-touch-nightly-20130225)**
+### 2月25日更新（kindlepdfviewer-touch-nightly-20130225)
 
-新特性：
+**新特性**：
 * 在屏幕底部增加阅读进度条。可使用设置菜单的全屏选项来启用/禁用进度条。
 * 单击屏幕右上角可以把当前页加入书签或移除当前页的书签。
 
-增强：
+**增强**：
 * 双击页面区域也可以确认切边对话框。
 * 默认页面背景颜色改为白色。
 * 默认阅读时每6页全刷一次。
 
 
 ================================================================
-**2月22日更新（kindlepdfviewer-touch-nightly-20130222)**
+### 2月22日更新（kindlepdfviewer-touch-nightly-20130222)
 
-新特性：
+**新特性**：
 * 加入PDF字体黑度调节。
 * 横屏后自动切换到适应内容宽度的缩放模式。（via 小南安安）
 
-增强：
+**增强**：
 * 使用切边框的四个顶点和四条边定位边框（可轻触和拖动设置）。
 * 使用确认/取消按钮代替双击/长按手势来退出切边对话框。
 
 
 ================================================================
-**2月20日更新（kindlepdfviewer-touch-nightly-20130220)**
+### 2月20日更新（kindlepdfviewer-touch-nightly-20130220)
 
-新特性：
+**新特性**：
 * 加入KUAL(Kindle Unified Application Launcher)的支持。
 * 文件管理器过滤原生系统生成的sdr目录。
 应用手动切边后自动切换到适应内容的缩放模式。（via 小南安安）
 
-修复：
+**修复**：
 * 修复从重排模式切换到非重排模式时缩放模式无法恢复的bug。
 
 ================================================================
-**2月19日更新（kindlepdfviewer-touch-nightly-20130219)**
+### 2月19日更新（kindlepdfviewer-touch-nightly-20130219)
 
-修复：
+**修复**：
 * 修复屏幕宽度与实际分辨率相差10个像素的bug。
 * 修复切边时没有重新计算页面大小的bug。
 
 
 ================================================================
-**2月17日更新（kindlepdfviewer-touch-nightly-20130217)**
+### 2月17日更新（kindlepdfviewer-touch-nightly-20130217)
 
-修复：
+**修复**：
 * 修复没有目录的PDF文件打开目录导致程序退出的bug。
 
 
 ================================================================
-**2月13日更新（kindlepdfviewer-touch-nightly-20130213)**
+### 2月13日更新（kindlepdfviewer-touch-nightly-20130213)
 
-修复：
+**修复**：
 * 修复设置菜单有时无法旋转屏幕的bug。
 * 修复屏幕旋转状态不能保存的bug。
 
 
 ================================================================
-**2月9日更新（kindlepdfviewer-touch-nightly-20130209)**
+### 2月9日更新（kindlepdfviewer-touch-nightly-20130209)
 
-修复：
+**修复**：
 * 修复切边不能立即应用的bug。
 
 
 ================================================================
-**2月6日更新（kindlepdfviewer-touch-nightly-20130206)**
+### 2月6日更新（kindlepdfviewer-touch-nightly-20130206)
 
-新特性：
+**新特性**：
 * 增加横屏阅读模式。
 
 ================================================================
-**2月4日更新（kindlepdfviewer-touch-nightly-20130204)**
+### 2月4日更新（kindlepdfviewer-touch-nightly-20130204)
 
-新特性：
+**新特性**：
 * 增加PDF手动切边。双击屏幕应用当前更改的切边，长按屏幕取消当前更改的切边。
 
 
 ================================================================
-**1月23日更新（kindlepdfviewer-touch-nightly-20130123)**
+### 1月23日更新（kindlepdfviewer-touch-nightly-20130123)
 
-特性增强：
+**增强**：
 * 升级到K2pdfopt版本1.64a
 
 
 ================================================================
-**1月22日更新（kindlepdfviewer-touch-nightly-20130122)**
+### 1月22日更新（kindlepdfviewer-touch-nightly-20130122)
 
-特性增强：
+**增强**：
 * EPUB文档默认使用文档内置样式。
 * EPUB文档可选软件预设样式。
 
 
 ================================================================
-**1月18日更新（kindlepdfviewer-touch-nightly-20130118)**
+### 1月18日更新（kindlepdfviewer-touch-nightly-20130118)
 
-修复：
+**修复**：
 * 修复预渲染最后一页导致程序退出的bug。
 
 
 ================================================================
-**1月16日更新（kindlepdfviewer-touch-nightly-20130116)**
+### 1月16日更新（kindlepdfviewer-touch-nightly-20130116)
 
-特性增强：
+**增强**：
 * 增加更多重排选项。
 
 ================================================================
-**1月10日更新（kindlepdfviewer-touch-nightly-20130110)**
+### 1月10日更新（kindlepdfviewer-touch-nightly-20130110)
 
-修复：
+**修复**：
 * 修复进入屏保导致KPV退出的bug。
 * 修复paperwhite上无法全刷的bug。
 
 
 ================================================================
-**1月7日更新（kindlepdfviewer-touch-nightly-20130107)**
+### 1月7日更新（kindlepdfviewer-touch-nightly-20130107)
 
-新特性（预览版发布）：
+**新特性**（预览版发布）：
 * Kpw和KT版的KPV可以作为插件与原生系统集成。
 * 页面重排基本功能已经实现。
 * 重排模式和非重排模式可在设置界面切换。
 
 ================================================================
-**12月22日更新（kindlepdfviewer-nightly-20121222)**
+### 12月22日更新（kindlepdfviewer-nightly-20121222)
 
-特性增强：
+**增强**：
 * 升级到K2pdfopt版本1.63
 
 ================================================================
-**11月27日更新（kindlepdfviewer-new-ui-demo)**
+### 11月27日更新（kindlepdfviewer-new-ui-demo)
 
-新特性：
+**新特性**：
 * 实验性支持Kindle Paperwhite和Kindle Touch。
 
 注：实验特性将不发布安装包，想要尝试的朋友可以按照如下命令自行编译。
 
 ================================================================
-**11月22日更新（kindlepdfviewer-nightly-20121122)**
+### 11月22日更新（kindlepdfviewer-nightly-20121122)
 
-特性增强：
+**增强**：
 * 默认开启多线程预渲染。
 * 重排默认参数可以自定义。
 
-修复：
+**修复**：
 * 修复重排模式翻页有内存泄漏的bug。
 * 修复缓存计数不一致有可能导致翻页无响应的bug。
 * 修复多线程模式下手动切边可能导致程序退出的bug。
 
 ================================================================
-**11月17日更新（kindlepdfviewer-nightly-20121117)**
+### 11月17日更新（kindlepdfviewer-nightly-20121117)
 
-特性增强：
+**增强**：
 * 升级到K2pdfopt版本1.62
 
-修复：
+**修复**：
 * 修复重排模式下某些页面最后一行显示不全的bug。
 
 ================================================================
-**11月15日更新（kindlepdfviewer-nightly-20121115)**
+### 11月15日更新（kindlepdfviewer-nightly-20121115)
 
-特性增强：
+**增强**：
 * 调小了默认词间距，中文文档的默认重排效果增强。
 
 ================================================================
-**11月14日更新（kindlepdfviewer-nightly-20121114)**
+### 11月14日更新（kindlepdfviewer-nightly-20121114)
 
-修复：
+**修复**：
 * 修复多线程开启和关闭切换也进行重排处理的bug。
 * 修复上翻页有时Rendering in background的提示不自动消失，必须按一次下翻页才能显示页面的bug。
  
 ================================================================
-**11月13日更新（kindlepdfviewer-nightly-20121113)**
+### 11月13日更新（kindlepdfviewer-nightly-20121113)
 
-新特性：
+**新特性**：
 * 增加多线程预渲染机制，翻页更流畅。（此版本多线程默认关闭，需要使用请在“Aa”选项中将其打开）
 
-特性增强：
+**增强**：
 * 默认最大栏数设为2，可以自动识别单栏和双栏文档。
 
 ================================================================
-**11月11日更新（kindlepdfviewer-nightly-20121111)**
+### 11月11日更新（kindlepdfviewer-nightly-20121111)
 
-新特性：
+**新特性**：
 * 增加手动切边再重排功能（博客中添加视屏演示）
 
-特性增强：
+**增强**：
 * 优化使用默认字体黑度时的运行速度。
 * 使用编译选项-O3优化重排处理速度，中等渲染质量重排一页的平均时间降到3秒钟左右。
 
-修复：
+**修复**：
 * 修复打开文件时阅读器选择对话框没有关闭的bug。
 * 修复已经预先切边的文档重排时出现部分文字缺失的bug。
 * 修复不足屏幕高的页面居中显示的bug。
 * 修复页尾被限制在屏幕最下方，造成阅读不连贯的bug。
 
 ================================================================
-**11月9日更新（kindlepdfviewer-nightly-20121109)**
+### 11月9日更新（kindlepdfviewer-nightly-20121109)
 
-修复：
+**修复**：
 * 参数调节时不再自动预览重排结果，需要预览请按五向确认键或者退出参数调节对话框。
 * 修复阅读器关联的bug。
 
 ================================================================
-**11月6日更新（kindlepdfviewer-nightly-20121106)**
+### 11月6日更新（kindlepdfviewer-nightly-20121106)
 
-新特性：
+**新特性**：
 * 增加重排质量参数，降低重排质量可以提升重排速度。
 * 增加去除页面污点参数，可选择污点大小。
 
-特性增强：
+**增强**：
 * 升级到K2pdfopt版本1.60
