Updated 更新日志 (markdown)

--- a/更新日志.md
+++ b/更新日志.md
@@ -1,4 +1,11 @@
 ================================================================
+### 1月23日更新（koreader-nightly-20140123)
+
+**修复**：
+* 修复选择标点悬浮导致字体和页边距设置无效的bug。
+* 修复几处导致程序异常退出的bug。
+
+================================================================
 ### 1月19日更新（koreader-nightly-20140119)
 
 **新特性**：
