Updated 更新日志 (markdown)

--- a/更新日志.md
+++ b/更新日志.md
@@ -1,5 +1,20 @@
 ================================================================
-### 1月23日更新（koreader-nightly-20140123)
+### 2月10日更新（koreader-nightly-20140210)
+
+**新特性**：
+* 标注保存到PDF文件。
+
+**增强**：
+* 更新crengine到最新版本。
+* 减少不必要的标点悬浮。
+
+**修复**：
+* 修复Kobo上退出koreader屏幕不刷新的bug。
+* 修复切换屏幕方向导致阅读进度丢失的bug。
+* 修复打开FB2和无内嵌css的EPUB文档时不自动使用默认css的bug。
+
+================================================================
+### 1月24日更新（koreader-nightly-20140124)
 
 **修复**：
 * 修复选择标点悬浮导致字体和页边距设置无效的bug。
