Updated 更新日志 (markdown)

--- a/更新日志.md
+++ b/更新日志.md
@@ -1,4 +1,19 @@
 ================================================================
+### 2月14日更新（koreader-nightly-20140214)
+
+**新特性**：
+* 双指向右滑动打开文档目录窗口。
+* 双指向左滑动打开书签窗口。
+* 长按进度条打开页面跳转窗口。
+
+**增强**：
+* 增加“完整/迷你”两种进度条选项。
+* 默认禁用屏幕下方点击弹出设置菜单。
+
+**修复**：
+* 修复kpw2前光开关无效的bug。
+
+================================================================
 ### 2月10日更新（koreader-nightly-20140210)
 
 **新特性**：
