Updated 更新日志 (markdown)

--- a/更新日志.md
+++ b/更新日志.md
@@ -1,4 +1,13 @@
 ================================================================
+### 3月11日更新（koreader-nightly-20140311)
+
+**修复**：
+* 修复PDF文档进入快速翻页模式无法退出的bug。
+* 修复DJVU格式文档半自动切边无效的bug。
+* 修复EPUB文档中连续多个标点可能进入死循环的bug。
+* 修复EPUB文档CSS字体定义不完整导致字体不可用的bug
+
+================================================================
 ### 2月14日更新（koreader-nightly-20140214)
 
 **新特性**：
