Updated 更新日志 (markdown)

--- a/更新日志.md
+++ b/更新日志.md
@@ -1,4 +1,12 @@
 ================================================================
+### 3月27日更新（koreader-nightly-20140327)
+
+**增强**：
+* 升级k2pdfopt到最新版本v2.15。
+* 升级Luajit到最新版本v2.1-beta。
+* 升级许可证到GNU AGPLv3。
+
+================================================================
 ### 3月11日更新（koreader-nightly-20140311)
 
 **修复**：
