Updated 更新日志 (markdown)

--- a/更新日志.md
+++ b/更新日志.md
@@ -1,4 +1,11 @@
 ================================================================
+### 4月5日更新（koreader-nightly-20140405）
+
+**新特性**：
+* 目录页粗体显示当前页面位置。
+* 页面下部进度条点击可隐藏。
+
+================================================================
 ### 3月27日更新（koreader-nightly-20140327)
 
 **增强**：
