Updated 更新日志 (markdown)

--- a/更新日志.md
+++ b/更新日志.md
@@ -1,4 +1,16 @@
 ================================================================
+### 4月24日更新（koreader-nightly-20140424）
+
+**新特性**：
+* 标注和笔记导出到Evernote。
+
+================================================================
+### 4月8日更新（koreader-nightly-20140408）
+
+**新特性**：
+* 加入PDF/DJVU去水印选项。
+
+================================================================
 ### 4月5日更新（koreader-nightly-20140405）
 
 **新特性**：
