Updated 更新日志 (markdown)

--- a/更新日志.md
+++ b/更新日志.md
@@ -1,4 +1,14 @@
 ================================================================
+### 5月2日更新（koreader-nightly-20140502）
+
+**新特性**：
+* Evernote插件支持印象笔记和Evernote国际版。
+
+**增强**：
+* 重排页面缓存加快启动速度。
+* 加入点击按钮时的反馈效果。
+
+================================================================
 ### 4月24日更新（koreader-nightly-20140424）
 
 **新特性**：
