--- a/更新日志.md
+++ b/更新日志.md
@@ -1,4 +1,10 @@
 ================================================================
+### 5月9日更新（koreader-nightly-20140509）
+
+**修复**：
+* Kobo Mini、Aura和Aura HD设备上退出koreader后返回原生系统主界面。
+
+================================================================
 ### 5月2日更新（koreader-nightly-20140502）
 
 **新特性**：
