Updated 更新日志 (markdown)

--- a/更新日志.md
+++ b/更新日志.md
@@ -2,7 +2,7 @@
 ### 5月9日更新（koreader-nightly-20140509）
 
 **修复**：
-* Kobo Mini、Aura和Aura HD设备上退出koreader后返回原生系统主界面。
+* Kobo Mini、Touch和Aura设备上退出koreader后返回原生系统主界面。
 
 ================================================================
 ### 5月2日更新（koreader-nightly-20140502）
