Updated 更新日志 (markdown)

--- a/更新日志.md
+++ b/更新日志.md
@@ -1,4 +1,18 @@
 ================================================================
+### 5月24日更新（koreader-nightly-20140524）
+
+**新特性**:
+* 扫描版PDF标注导出到印象笔记
+
+**增强**：
+* Kobo设备可选界面语言
+* 加大进度条点击响应区域
+* Evernote笔记增量导出
+
+**修复**：
+* 修复自动切边的一处内存泄漏的bug
+
+================================================================
 ### 5月9日更新（koreader-nightly-20140509）
 
 **修复**：
