Updated 更新日志 (markdown)

--- a/更新日志.md
+++ b/更新日志.md
@@ -1,4 +1,18 @@
 ================================================================
+### 6月5日更新（koreader-nightly-20140605）
+
+**新特性**:
+* 支持Android 2.3以上设备
+
+**增强**：
+* 使用MuPDF处理ZIP文件，增强稳定性
+
+**修复**：
+* 修复字重选项无法保存的bug
+* 修复某些情况下缓存失败可能导致程序crash的bug
+* 修复竖排页面选项导致bbox计算失败的bug
+
+================================================================
 ### 5月24日更新（koreader-nightly-20140524）
 
 **新特性**:
