Updated 更新日志 (markdown)

--- a/更新日志.md
+++ b/更新日志.md
@@ -10,6 +10,7 @@
 **修复**：
 * 修复字重选项无法保存的bug
 * 修复某些情况下缓存失败可能导致程序crash的bug
+* 修复Kobo Mini和某些Kobo Touch版本上程序无法启动的bug
 * 修复竖排页面选项导致bbox计算失败的bug
 
 ================================================================
