Updated 更新日志 (markdown)

--- a/更新日志.md
+++ b/更新日志.md
@@ -1,4 +1,18 @@
 ================================================================
+### 6月9日更新（koreader-nightly-20140609）
+
+**新特性**:
+* 增加夜间模式选项
+* 增加迷你进度条的点击区域设置
+
+**增强**：
+* 设备进入屏保时自动保存当前阅读进度
+
+**修复**：
+* 修复屏幕旋转手势捕获不到的bug
+* 修复无法自动探测到系统语言的bug
+
+================================================================
 ### 6月5日更新（koreader-nightly-20140605）
 
 **新特性**:
