Updated 更新日志 (markdown)

--- a/更新日志.md
+++ b/更新日志.md
@@ -5,13 +5,13 @@
 * 增加局域网无线互传插件（ZSync）
 
 **增强**：
-* 默认配置文件在升级过程中可以保留。
-* 新增对角线快速滑动手势截屏。
+* 默认配置文件在升级过程中可以保留
+* 新增对角线快速滑动手势截屏
 
 **修复**：
-* 修复连字符词典无法启用的bug。
-* 修复Kobo上无法休眠的bug。
-* 修复Kobo Aura屏幕显示不完整的bug。
+* 修复连字符词典无法启用的bug
+* 修复Kobo上无法休眠的bug
+* 修复Kobo Aura屏幕显示不完整的bug
 
 ================================================================
 ### 6月9日更新（koreader-nightly-20140609）
