Updated 更新日志 (markdown)

--- a/更新日志.md
+++ b/更新日志.md
@@ -1,4 +1,19 @@
 ================================================================
+### 7月15日更新（koreader-nightly-20140715）
+
+**增强**：
+* 更新mupdf和k2pdfopt到最新版本
+* 长按屏幕下方选项、缩放菜单和字体菜单可保存为全局设置
+* 在迷你状态栏显示剩余页数和电量
+* 优化编译参数
+
+**修复**：
+* 修复Kobo固件3.4.1上退出koreader返回Nickel的脚本
+* 修复EPUB文档中无法在一章中最后一页取词的bug
+* 修复Android上自动旋转屏幕导致koreader无法响应的bug
+* 修复PDF页面选择文本范围超过当前页的bug
+
+================================================================
 ### 6月29日更新（koreader-nightly-20140629）
 
 **新特性**:
