Updated 更新日志 (markdown)

--- a/更新日志.md
+++ b/更新日志.md
@@ -1,4 +1,17 @@
 ================================================================
+### 8月2日更新（koreader-nightly-20140802）
+
+**新特性**:
+* 增加屏幕刷新率菜单选项
+* 增加界面字体大小菜单选项
+* 增加OTA升级菜单选项
+
+**增强**：
+* 支持4GB新型号Kindle PW2
+* 菜单页面支持直接跳转到首尾页
+* 左右滑动切换不同词典释义
+
+================================================================
 ### 7月15日更新（koreader-nightly-20140715）
 
 **增强**：
