Updated 更新日志 (markdown)

--- a/更新日志.md
+++ b/更新日志.md
@@ -1,4 +1,22 @@
 ================================================================
+### 8月21日更新（koreader-nightly-20140821）
+
+**新特性**：
+* 加入搜索Calibre数据库
+* 进度条可显示章节位置
+* Kobo设备可显示屏保
+* 长按单词可查询维基百科
+
+**增强**：
+* 非重排模式下可选择右至左方向翻页
+* 词典窗口长按单词可输入其他单词查询词典和维基百科
+* 更新MuPDF到最新版本
+* 更新K2pdfopt到最新版本
+
+**修复**：
+* 修复PDF文档迷你进度条无法显示电量的bug
+
+================================================================
 ### 8月2日更新（koreader-nightly-20140802）
 
 **新特性**:
