Updated 更新日志 (markdown)

--- a/更新日志.md
+++ b/更新日志.md
@@ -1,4 +1,18 @@
 ================================================================
+### 9月29日更新（koreader-nightly-20140929）
+
+**新特性**：
+* 从阅读菜单可直接进入文件管理器
+* 增加OPDS在线书目的支持
+* 新插件Calibre伴侣，可通过WIFI从Calibre发送文档到Koreader设备
+* 菜单中加入WIFI开关按钮，快速打开/关闭WIFI连接
+
+**增强**：
+* 可排除特定图书封面作为屏保画面（仅适用于Kobo）
+* 可自定义迷你进度条的字体大小
+* 开发Koreader的模拟器可运行在Windows平台上（不适用于日常使用）
+
+================================================================
 ### 8月21日更新（koreader-nightly-20140821）
 
 **新特性**：
