Updated 更新日志 (markdown)

--- a/更新日志.md
+++ b/更新日志.md
@@ -1,4 +1,34 @@
 ================================================================
+### 3月18日更新（koreader-nightly-20150318）
+
+**新特性**：
+* 增加GIF和PNG图片支持
+* 增加箭头显示页面重叠
+* 移植到PocketBook
+* 增加FONTDIR变量自定义字体目录
+* 增加OTA稳定版通道
+* 增加Kindle Voyage支持
+* 加入进度同步插件
+
+**增强**：
+* 菜单栏和设置栏会根据选项实时动态变化
+
+================================================================
+### 11月7日更新（koreader-nightly-20141107）
+
+**新特性**：
+* 使用变量NETWORK_PROXY定义网络代理
+* 菜单栏中增加查询词典
+* 菜单栏中增加DJVU渲染模式
+* 增加导出标记到本地HTML文档
+* 增加可展开式文档目录
+* 菜单栏中增加阅读历史记录
+* 增加PDF和EPUB文档的全文搜索
+
+**修复**:
+* 修复从calibre无线传输文件可能导致内存泄漏
+
+================================================================
 ### 9月29日更新（koreader-nightly-20140929）
 
 **新特性**：
